ビルド設定修正

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "eslint . --fix --cache",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build -o storybook-static"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.4",
