--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -11,7 +11,6 @@ on:
       - 'tokens/**/*.mdx'
       - 'package.json'
       - 'pnpm-lock.yaml'
-
   pull_request:
     branches: ["main"]
     paths:
@@ -42,11 +41,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Debug file structure
+        run: |
+          pwd
+          ls -la
+          cat pnpm-lock.yaml || echo "pnpm-lock.yaml not found"
 
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
+          run_install: false
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -54,21 +62,10 @@ jobs:
           node-version: "20"
           cache: 'pnpm'
 
-      # Viteとストーリーブックのキャッシュを設定
-      - name: Cache build files
-        uses: actions/cache@v4
-        with:
-          path: |
-            storybook-static
-            node_modules/.cache
-            node_modules/.vite
-          key: ${{ runner.os }}-vite-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          restore-keys: |
-            ${{ runner.os }}-vite-${{ hashFiles('**/pnpm-lock.yaml') }}-
-            ${{ runner.os }}-vite-
-
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+        env:
+          DEBUG: pnpm:*
 
       - name: Build Storybook
         run: pnpm run build-storybook
