--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -1,74 +1,35 @@
-name: Deploy Storybook
-on:
+name: 'Chromatic Deployment'
+
+on: 
   push:
-    branches: ["main"]
-    paths:
-      - 'src/**/*.stories.@(js|jsx|ts|tsx|mdx)'
-      - '.storybook/**'
-      - 'src/**/*.mdx'
-      - 'src/**/*.stories.@(js|jsx|mjs|ts|tsx|)'
-      - 'tokens/**/*.stories.@(js|jsx|ts|tsx|)'
-      - 'tokens/**/*.mdx'
-      - 'package.json'
-      - 'pnpm-lock.yaml'
+    branches: [ main ]
   pull_request:
-    branches: ["main"]
-    paths:
-      - 'src/**/*.stories.@(js|jsx|ts|tsx|mdx)'
-      - '.storybook/**'
-      - 'src/**/*.mdx'
-      - 'src/**/*.stories.@(js|jsx|mjs|ts|tsx|)'
-      - 'tokens/**/*.stories.@(js|jsx|ts|tsx|)'
-      - 'tokens/**/*.mdx'
-      - 'package.json'
-      - 'pnpm-lock.yaml'
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+    branches: [ main ]
 
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  chromatic-deployment:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
         with:
           version: 8
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: '22'
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
-      - name: Build Storybook
-        run: pnpm run build-storybook
-        env:
-          NODE_OPTIONS: --max-old-space-size=4096
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Publish to Chromatic
+        uses: chromaui/action@v1
         with:
-          path: './storybook-static'
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          buildScriptName: build-storybook
